Static HTML implemented

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,10 @@
+<!doctype html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="description" content="Remember that Night - Festical Playlist Generator">
+        <meta name="author" content="tarrask.com & Garagem Infinita">
+
         <title>{{ title }} - Festival Playlist Generator</title>
     </head>
     <body>
