--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hi, Tarrask!</h1>
+<h1>
+  Remember that night
+</h1>
+<h2>
+  Garagem Infinita’s Festival Playlist Generator
+</h2>
+<p>Create a playlist for your favorite music festival on Spotify, with one click.
+</p>
 {% endblock %}
