--- a/app/templates/playlist.html
+++ b/app/templates/playlist.html
@@ -2,15 +2,12 @@
 
 {% block content %}
 <h1>
-  Remember that night - {{playlist.name}}
+  Remember that night - {{ playlist.festival }}.
 </h1>
 <h2>
   Garagem Infinita’s Festival Playlist Generator
 </h2>
 <p>Here's the playlist you created:</p>
-<h3>{{playlist.name}}, {{playlist.year}}</h3>
-{ % for song in playlist.songs % }
-song.name
-{ % endfor % }
-
+<h3>{{ playlist.festival }}, {{ playlist.year }}</h3>
+{{ playlist.bands }}
 {% endblock %}
