--- a/app/templates/playlist.html
+++ b/app/templates/playlist.html
@@ -17,4 +17,9 @@
 </li>
 {% endfor %}
 
+<form action="" method="post" novalidate>
+  {{ form.hidden_tag() }}
+  <p>{{ form.submit() }}</p>
+</form>
+
 {% endblock %}
