--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,13 +1,40 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="Remember that Night - Festical Playlist Generator">
-        <meta name="author" content="tarrask.com & Garagem Infinita">
+<!DOCTYPE html>
+<html lang="en">
 
-        <title>{{ title }} - Festival Playlist Generator</title>
-    </head>
-    <body>
-        {% block content %}{% endblock %}
-    </body>
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Remember that Night - Festical Playlist Generator">
+  <meta name="author" content="">
+
+  <title>{{ title }} - Festival Playlist Generator</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom fonts for this template -->
+  <link href="static/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="static/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+  <!-- Custom styles for this template -->
+  <link href="static/css/landing-page.min.css" rel="stylesheet">
+
+</head>
+
+<body>
+  <!-- Navigation -->
+  <nav class="navbar navbar-light bg-light static-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Remember that night</a>
+    </div>
+  </nav>
+  {% block content %}{% endblock %}
+</body>
+
+<!-- Bootstrap core JavaScript -->
+<script src="static/jquery/jquery.min.js"></script>
+<script src="static/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 </html>
