--- a/app/templates/playlist.html
+++ b/app/templates/playlist.html
@@ -1,25 +1,34 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>
-  Remember that night - {{ playlist.name }}.
-</h1>
-<h2>
-  Garagem Infinita’s Festival Playlist Generator
-</h2>
-<p>Here's the playlist you created:</p>
-<h3>{{ playlist.name }}, {{ playlist.year }}</h3>
-<h4>{{ playlist.bands }}</h4>
+<!-- Masthead -->
+<header class="masthead text-white text-center">
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-9 mx-auto">
+        <h1 class="mb-5">Remember that night - {{ playlist.name }}</h1>
+        <p>
+          Here's the playlist we found on Spotify for your festival {{ playlist.name }}.
+        </p>
+        <h3>Festival {{ playlist.name }}, {{ playlist.year }}</h3>
+        <h4>Setlist: {{ playlist.bands }}</h4>
+      </div>
+      <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+        <h4>Songs: </h4>
+        {% for song in songs%}
+        <li>
+          {{ song.song_name, song.release_date, song.popularity }}
+        </li>
+        {% endfor %}
 
-{% for song in songs%}
-<li>
-  {{ song.song_name, song.release_date, song.popularity }}
-</li>
-{% endfor %}
-
-<form action="" method="post" novalidate>
-  {{ form.hidden_tag() }}
-  <p>{{ form.submit() }}</p>
-</form>
+        <form action="" method="post" novalidate>
+          {{ form.hidden_tag() }}
+          <p>{{ form.submit() }}</p>
+        </form>
+      </div>
+    </div>
+  </div>
+</header>
 
 {% endblock %}
