--- a/app/templates/spotify.html
+++ b/app/templates/spotify.html
@@ -1,14 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>
-  Remember that night - {{ playlist_data["name"] }}.
-</h1>
-<h2>
-  Garagem Infinita’s Festival Playlist Generator
-</h2>
-<p>Here's the playlist you created:</p>
+<!-- Masthead -->
+<header class="masthead text-white text-center">
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-9 mx-auto">
+        <h1 class="mb-5">Remember that night - {{ playlist_data["name"] }}
+        </h1>
+        <p>Here's the playlist you created:</p>
 
-<p> <a href={{ playlist_data["external_urls"]["spotify"] }}>{{ playlist_data["name"] }}</a> </p>
-
+        <p> <a href={{ playlist_data["external_urls"]["spotify"] }}>{{ playlist_data["name"] }}</a> </p>
+      </div>
+    </div>
+  </div>
+</header>
 {% endblock %}
