added logo & link to Garagem Infinita

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,6 +27,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
+      <a href="https://www.garageminfinita.com"><img src= "static/img/GaragemLogo.png"></a>
       <a class="navbar-brand" href="#">Remember that night</a>
     </div>
   </nav>
